# worktodo

./: .gitignore  README.md  pyproject.toml
scripts/: run_forecast.bat  run_forecast.sh  run_optimize.bat  run_optimize.sh  run_templates.bat  run_templates.sh
src/skillrunner/: __init__.py  cli.py  excel_utils.py  io_utils.py  plugin.py
src/skillrunner_budgetmatch/: __init__.py  skill.py
tests/: test_budget_matcher.py
